--- a/collectlibrary/src/main/res/values/attr.xml
+++ b/collectlibrary/src/main/res/values/attr.xml
@@ -15,4 +15,22 @@
         <attr name="rightBottomCorner" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="ShapeBgTextView">
+        <!--是否显示我们自己画的背景-->
+        <attr name="showBgShape" format="boolean" />
+        <!--自己画的背景色-->
+        <attr name="shapeColor" format="color|reference" />
+        <!--线条模式的线条宽度 -->
+        <attr name="shapeBgLineWidth" format="dimension" />
+        <!--圆角的大小 dp单位-->
+        <attr name="shapeCornerSize" format="dimension" />
+        <!--画的背景样式-->
+        <attr name="shapeStyle" format="enum">
+            <!--周围线条样式-->
+            <enum name="line" value="0" />
+            <!--内部填充样式-->
+            <enum name="fill" value="1" />
+        </attr>
+    </declare-styleable>
+
 </resources>
