--- a/collectlibrary/src/main/res/values/attr.xml
+++ b/collectlibrary/src/main/res/values/attr.xml
@@ -33,4 +33,11 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="StatesLayout">
+        <!--加载过程的视图布局-->
+        <attr name="loadingView" format="reference" />
+        <!--空视图布局-->
+        <attr name="emptyView" format="reference" />
+    </declare-styleable>
+
 </resources>
