视频播放控件继续写

--- a/app/src/main/res/layout/activity_custom_surface_video.xml
+++ b/app/src/main/res/layout/activity_custom_surface_video.xml
@@ -16,4 +16,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.zd.collectlibrary.view.VideoControlView
+        android:id="@+id/control"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/video_view"
+        app:layout_constraintEnd_toEndOf="@+id/video_view"
+        app:layout_constraintStart_toStartOf="@+id/video_view"
+        app:layout_constraintTop_toTopOf="@+id/video_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
