视频播放控件继续优化

--- a/app/src/main/res/layout/activity_custom_surface_video.xml
+++ b/app/src/main/res/layout/activity_custom_surface_video.xml
@@ -16,12 +16,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.zd.collectlibrary.view.CustomSurfaceVideoView
+    <com.zd.collectlibrary.videoview.SurfaceVideoLayout
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="640:360"
+        app:layout_constraintDimensionRatio="1080:850"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content" />
